--- a/css/style.css
+++ b/css/style.css
@@ -50,18 +50,20 @@ body, html{
 }
 .main-menu{
     list-style: none;
-    float: right;
-    margin-top: 20px;
+    float: left;
+    margin-top: 25px;
+    background-color: darkcyan;
 }
 .main-menu a{
     font-weight: 500;
     color: #3a3a3a;
     font-size: 20px;
     text-decoration: none;
+    color: white;
 }
 .main-menu li{
     float: left;
-    padding: 12px 15px;
+    padding: 15px 20px;
 }
 .margin-top-50{
     margin-top: 50px;
